# Vull-E

./: .env.example  .env.production.example  .gitignore  README.md  constraints.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: hacktricks_sources.yml
docs/: bank-integration-checklist.md  qdrant-rag.md
docs/knowledge/: access-control.md  audit-logging.md  idor-checklist.md  rag-source-priority.md
docs/knowledge/internal/: audit-logging-standard.template.md  business-flows.template.md  data-masking-standard.template.md  endpoint-inventory.template.md  past-findings.template.md  role-matrix.template.md
docs/knowledge/mitre/: capec-authorization-abuse-patterns.md  capec-data-exfiltration-and-discovery.md  capec-injection-and-input-abuse.md  capec-parameter-tampering-workflow.md  cwe-access-control-authorization.md  cwe-file-upload-deserialization.md  cwe-input-validation-injection.md  cwe-sensitive-data-logging.md
docs/knowledge/owasp/: api-object-authorization.md  api-security-notes.md  api-top10-2023-detailed.md  asvs-access-control.md  asvs-authentication-session.md  business-logic-insecure-design.md  data-protection-logging.md  file-upload-download.md  graphql-security.md  input-validation-injection.md  mass-assignment-object-property.md  rate-limit-resource-consumption.md  security-misconfiguration-error-handling.md  ssrf-external-integrations.md  top10-2021-risk-mapping.md  wstg-authorization-testing.md
docs/knowledge/portswigger/: access-control-testing-methodology.md  api-testing-methodology.md  authentication-session-testing-methodology.md  business-logic-testing-methodology.md  file-upload-testing-methodology.md  graphql-testing-methodology.md  information-disclosure-testing-methodology.md  jwt-oauth-testing-methodology.md  race-condition-testing-methodology.md  ssrf-testing-methodology.md
examples/: jira_issue.sample.json
examples/profiles/: bank-a.env.example
src/vulle/: __init__.py  audit.py  banner.py  cli.py  config.py  confluence_client.py  doctor.py  embedding_server.py  errors.py  jira_client.py  llm.py  models.py  security.py
src/vulle/agents/: __init__.py  jira_analysis.py
src/vulle/apk/: __init__.py  limits.py  models.py  pipeline.py  workspace.py
src/vulle/apk/analyzers/: __init__.py  component_rules.py  crypto_rules.py  dependency_rules.py  manifest_rules.py  native_rules.py  secret_rules.py  storage_rules.py  tls_rules.py  webview_rules.py
src/vulle/apk/extractors/: __init__.py  certificates.py  dex_analysis.py  manifest.py  metadata.py  native_analysis.py
src/vulle/dynamic/: adb.py  crawler.py  flow_ingestion.py  flow_rendering.py  limits.py  models.py  pipeline.py
src/vulle/dynamic/analyzers/: http_traffic_rules.py
src/vulle/rag/: __init__.py  documents.py  embeddings.py  evaluation.py  hacktricks.py  importers.py  indexing.py  qdrant_store.py  service.py
tests/: rag_eval_cases.json  test_apk_analysis.py  test_apk_workspace.py  test_audit.py  test_config.py  test_confluence_client.py  test_doctor.py  test_dynamic_analysis.py  test_embedding_server.py  test_embeddings.py  test_errors.py  test_hacktricks.py  test_jira_analysis.py  test_jira_client.py  test_llm.py  test_qdrant_store.py  test_rag_documents.py  test_rag_evaluation.py  test_rag_importers.py  test_rag_indexing.py  test_rag_service.py  test_security.py
tests/fixtures/hacktricks/linux/: linux-privesc.md
tests/fixtures/hacktricks/pentesting-web/: file-upload.md  graphql.md  jwt.md  ssrf.md
tests/fixtures/importers/mitre/: capec.xml  cwe.csv
tests/fixtures/importers/owasp-masvs/Document/: 08-MASVS-NETWORK.md
tests/fixtures/importers/owasp-masvs/controls/: MASVS-NETWORK-1.md
tests/fixtures/importers/payloads/SQL Injection/: README.md
(+7 files in other folders)
