[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulle"
version = "0.1.0"
description = "Agentic pre-deployment security analysis prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "qdrant-client>=1.12.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.scripts]
vulle = "vulle.cli:app"

[project.optional-dependencies]
dev = [
  "bandit>=1.9.4",
  "mypy>=2.1.0",
  "pip-audit>=2.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
files = ["src/vulle"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.coverage.run]
source = ["vulle"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 55

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
